# CHIP-8-Emulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
src/: Platform.cpp  Platform.hpp  chip8.cpp  chip8.hpp  main.cpp
